Added neural network model loading and saving

--- a/test/neural_network.ipynb
+++ b/test/neural_network.ipynb
@@ -2,25 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from keras.datasets import mnist\n",
-    "from keras.models import Sequential, Model\n",
+    "from keras.models import Sequential, Model, load_model\n",
     "from keras.layers.core import Dense, Dropout, Activation, Flatten\n",
     "from keras.layers import Conv2D, MaxPooling2D\n",
     "from keras.utils import np_utils\n",
@@ -291,18 +283,72 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test score: 0.030920047998816882\n",
-      "Test accuracy: 0.9901999831199646\n"
-     ]
-    }
+   "cell_type": "markdown",
+   "source": [
+    "### Save model"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [],
+   "source": [
+    "model.save(\"./learned_model\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Load model"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [],
+   "source": [
+    "model = load_model(\"./learned_model\")\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "model.predict(X_test[0:1])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "score = model.evaluate(X_test, Y_test, verbose=0)\n",
     "print('Test score:', score[0])\n",
