added way to save data for particular instances, extended JSON

--- a/test/neural_network.ipynb
+++ b/test/neural_network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "l1_neurons, l2_neurons = 64, 64"
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "model = load_model(\"./learned_model\")\n"
@@ -358,7 +358,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[ -7.981908  ,  -0.64660966,  -0.68046004,  -0.31960887,\n         -4.039082  ,  -7.3889847 , -15.316356  ,  16.39567   ,\n         -4.214029  ,   0.940514  ]], dtype=float32)"
+      "text/plain": "array([[2.5413119e-10, 7.2725243e-08, 1.8006419e-07, 8.1381181e-08,\n        8.0439770e-09, 1.0159780e-11, 2.0304556e-13, 9.9999964e-01,\n        1.1882700e-11, 5.4441585e-08]], dtype=float32)"
      },
      "execution_count": 9,
      "metadata": {},
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "outputs": [],
    "source": [
     "# fc1_output = Model(inputs=model.input, outputs=model.get_layer(name='fc1').output)\n",
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "outputs": [
     {
      "name": "stdout",
@@ -466,38 +466,8 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "## Create JSON\n",
-    "following schema is used\n",
-    "- {\"activations\": {\"layer_name\": {\"instance_name\": [neuron activations,...],...},...}}"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
    "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [],
-   "source": [
-    "activations = {'FC1': fc1_activations,\n",
-    "               'FC2': fc2_activations,\n",
-    "               'Output': output_activations}"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "outputs": [
     {
      "data": {
@@ -601,11 +571,11 @@
     }
    ],
    "source": [
-    "avg_digit_images = {}\n",
+    "images = {}\n",
     "for digit in range(10):\n",
     "    cur_name = f'Digit {digit}'\n",
     "    cur_digit = np.average(all_data[all_labels == digit], axis=0).reshape(28,28)\n",
-    "    avg_digit_images[cur_name] = cur_digit.tolist()\n",
+    "    images[cur_name] = cur_digit.tolist()\n",
     "    plt.figure()\n",
     "    plt.imshow(cur_digit, cmap='gray', interpolation='none')"
    ],
@@ -618,11 +588,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nine #20           \n",
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "digit_to_name = {0: \"Zero\",\n",
+    "                 1: \"One\",\n",
+    "                 2: \"Two\",\n",
+    "                 3: \"Three\",\n",
+    "                 4: \"Four\",\n",
+    "                 5: \"Five\",\n",
+    "                 6: \"Six\",\n",
+    "                 7: \"Seven\",\n",
+    "                 8: \"Eight\",\n",
+    "                 9: \"Nine\"}\n",
+    "\n",
+    "digit_to_instances = {digit:[f'Digit {digit}'] for digit in range(10)}\n",
+    "images_to_use = 20\n",
+    "for digit in range(10):\n",
+    "    cur_digit = all_data[all_labels == digit][:images_to_use]\n",
+    "    fc1_t, fc2_t, out_t = intermediate_outputs.predict(cur_digit)\n",
+    "    for idx, fc1a, fc2a, oa, img in zip(range(images_to_use),fc1_t, fc2_t, out_t, cur_digit.reshape(-1, 28, 28)):\n",
+    "        instance_name = f'{digit_to_name[digit]} #{idx+1}'\n",
+    "        print(f'\\r{instance_name}'+10*' ', end=\"\")\n",
+    "        fc1_activations[instance_name] = fc1a.tolist()\n",
+    "        fc2_activations[instance_name] = fc2a.tolist()\n",
+    "        output_activations[instance_name] = oa.tolist()\n",
+    "        images[instance_name] = img.tolist()\n",
+    "        digit_to_instances[digit].append(instance_name)\n",
+    "print('\\nDone')\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Create JSON\n",
+    "As a python dictionary is more or less analogous to JSON objects,\n",
+    " the schema can be seen by inspecting out_data dictionary"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "outputs": [],
    "source": [
-    "out_data = {'activations': activations,\n",
-    "            'images': avg_digit_images}"
+    "activations = {'FC1': fc1_activations,\n",
+    "               'FC2': fc2_activations,\n",
+    "               'Output': output_activations}"
    ],
    "metadata": {
     "collapsed": false,
@@ -633,7 +663,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 43,
+   "outputs": [],
+   "source": [
+    "out_data = {'activations': activations,\n",
+    "            'images': images,\n",
+    "            'digit_to_instances': digit_to_instances}"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "outputs": [],
    "source": [
     "#prototype for saving data\n",
