Project structure refactor, renamed test to src

--- a/src/neural_network.ipynb
+++ b/src/neural_network.ipynb
@@ -317,7 +317,7 @@
    "execution_count": 10,
    "outputs": [],
    "source": [
-    "model.save(\"./learned_model\")"
+    "model.save(\"./trained_model\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -343,7 +343,7 @@
    "execution_count": 8,
    "outputs": [],
    "source": [
-    "model = load_model(\"./learned_model\")\n"
+    "model = load_model(\"./trained_model\")\n"
    ],
    "metadata": {
     "collapsed": false,
