Consolidate image gallery, selected image view and menu buttons into one window

--- a/src/neural_network.ipynb
+++ b/src/neural_network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -18,6 +18,8 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from utils import get_average_digit_instance_name\n",
     "\n",
     "from keras.datasets import mnist\n",
     "from keras.models import Sequential, Model, load_model\n",
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
@@ -110,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -152,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -193,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "l1_neurons, l2_neurons = 64, 64"
@@ -340,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "model = load_model(\"./trained_model\")\n"
@@ -354,13 +356,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[2.5413119e-10, 7.2725243e-08, 1.8006419e-07, 8.1381181e-08,\n        8.0439770e-09, 1.0159780e-11, 2.0304556e-13, 9.9999964e-01,\n        1.1882700e-11, 5.4441585e-08]], dtype=float32)"
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -414,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "# fc1_output = Model(inputs=model.input, outputs=model.get_layer(name='fc1').output)\n",
@@ -434,13 +436,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Digit 9\n",
+      "Average 9\n",
       "Done\n"
      ]
     }
@@ -450,7 +452,7 @@
     "fc2_activations = {}\n",
     "output_activations = {}\n",
     "for digit in range(10):\n",
-    "    cur_name = f'Digit {digit}'\n",
+    "    cur_name = get_average_digit_instance_name(digit)\n",
     "    print(f'\\r{cur_name}', end=\"\")\n",
     "    cur_digit = all_data[all_labels == digit]\n",
     "    fc1_t, fc2_t, out_t = map(lambda x: np.average(x, axis=0).tolist(), intermediate_outputs.predict(cur_digit))\n",
@@ -467,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
@@ -573,7 +575,7 @@
    "source": [
     "images = {}\n",
     "for digit in range(10):\n",
-    "    cur_name = f'Digit {digit}'\n",
+    "    cur_name = get_average_digit_instance_name(digit)\n",
     "    cur_digit = np.average(all_data[all_labels == digit], axis=0).reshape(28,28)\n",
     "    images[cur_name] = cur_digit.tolist()\n",
     "    plt.figure()\n",
@@ -588,13 +590,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nine #20           \n",
+      "Nine #49           \n",
       "Done\n"
      ]
     }
@@ -611,8 +613,8 @@
     "                 8: \"Eight\",\n",
     "                 9: \"Nine\"}\n",
     "\n",
-    "digit_to_instances = {digit:[f'Digit {digit}'] for digit in range(10)}\n",
-    "images_to_use = 20\n",
+    "digit_to_instances = {digit:[get_average_digit_instance_name(digit)] for digit in range(10)}\n",
+    "images_to_use = 49\n",
     "for digit in range(10):\n",
     "    cur_digit = all_data[all_labels == digit][:images_to_use]\n",
     "    fc1_t, fc2_t, out_t = intermediate_outputs.predict(cur_digit)\n",
@@ -647,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "activations = {'FC1': fc1_activations,\n",
@@ -663,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "out_data = {'activations': activations,\n",
@@ -679,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "#prototype for saving data\n",
