--- a/src/neural_network.ipynb
+++ b/src/neural_network.ipynb
@@ -360,7 +360,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[2.5413119e-10, 7.2725243e-08, 1.8006419e-07, 8.1381181e-08,\n        8.0439770e-09, 1.0159780e-11, 2.0304556e-13, 9.9999964e-01,\n        1.1882700e-11, 5.4441585e-08]], dtype=float32)"
+      "text/plain": "array([[2.5413069e-10, 7.2725108e-08, 1.8006385e-07, 8.1381025e-08,\n        8.0439619e-09, 1.0159780e-11, 2.0304480e-13, 9.9999964e-01,\n        1.1882655e-11, 5.4441585e-08]], dtype=float32)"
      },
      "execution_count": 8,
      "metadata": {},
@@ -403,6 +403,87 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 60,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(13,) (200,) (12,) (212,) True True False False (13,)\n",
+      "(28,) (200,) (28,) (228,) True True False False (28,)\n",
+      "(86,) (200,) (81,) (281,) True True False False (86,)\n",
+      "(78,) (200,) (77,) (277,) True True False False (78,)\n",
+      "(39,) (200,) (39,) (239,) True True False False (39,)\n",
+      "(38,) (200,) (36,) (236,) True True False False (38,)\n",
+      "(46,) (200,) (45,) (245,) True True False False (46,)\n",
+      "(24,) (200,) (24,) (224,) True True False False (24,)\n",
+      "(78,) (200,) (73,) (273,) True True False False (78,)\n",
+      "(89,) (200,) (86,) (286,) True True False False (89,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create selections of a subset of images for each digits and append all missclasifications\n",
+    "digit_to_name = {0: \"Zero\",\n",
+    "                 1: \"One\",\n",
+    "                 2: \"Two\",\n",
+    "                 3: \"Three\",\n",
+    "                 4: \"Four\",\n",
+    "                 5: \"Five\",\n",
+    "                 6: \"Six\",\n",
+    "                 7: \"Seven\",\n",
+    "                 8: \"Eight\",\n",
+    "                 9: \"Nine\"}\n",
+    "\n",
+    "def get_instance_name(digit, num):\n",
+    "    return f'{digit_to_name[digit]} #{num}'\n",
+    "\n",
+    "np.random.seed(123)\n",
+    "random_sample_size = 200\n",
+    "digit_selected_data = {}\n",
+    "instance_prediction_results = {get_average_digit_instance_name(digit): {'real': digit, 'pred': digit} for digit in range(10)}\n",
+    "\n",
+    "for digit in range(10):\n",
+    "    cur_digit_data = all_data[all_labels == digit]\n",
+    "    # cur_digit_labels = all_labels[all_labels == digit]\n",
+    "\n",
+    "    predicted = model.predict_classes(cur_digit_data)\n",
+    "\n",
+    "    incorrect_indices = np.nonzero(predicted != digit)[0]\n",
+    "    selected_indices = np.random.choice(cur_digit_data.shape[0], size=(random_sample_size,), replace=False)\n",
+    "    incorrect_unselected = np.fromiter(set(incorrect_indices)-set(selected_indices), dtype=incorrect_indices.dtype)\n",
+    "    all_selected_indices = np.append(selected_indices, incorrect_unselected)\n",
+    "    all_subset = cur_digit_data[all_selected_indices]\n",
+    "    all_subset_preds = predicted[all_selected_indices]\n",
+    "    dimred_mask = np.zeros_like(all_selected_indices, dtype=bool)\n",
+    "    dimred_mask[:random_sample_size] = True\n",
+    "    names = []\n",
+    "    for num, predicted_class in enumerate(all_subset_preds, start=1):\n",
+    "        cur_name = get_instance_name(digit, num)\n",
+    "        names.append(cur_name)\n",
+    "        instance_prediction_results[cur_name] = {'real': digit, 'pred': int(predicted_class)}\n",
+    "    npnames = np.array(names)\n",
+    "    digit_selected_data[digit] = (all_subset, all_subset_preds, npnames, dimred_mask)\n",
+    "\n",
+    "    print(f'{incorrect_indices.shape}'\n",
+    "          f' {selected_indices.shape}'\n",
+    "          f' {incorrect_unselected.shape}'\n",
+    "          f' {all_selected_indices.shape}'\n",
+    "          f' {dimred_mask[0]} {dimred_mask[199]} {dimred_mask[200]} {dimred_mask[-1]}'\n",
+    "          f' {np.nonzero(all_subset_preds != digit)[0].shape}')\n",
+    "\n",
+    "\n",
+    "# np.nonzero(model.predict_classes(all_data) != all_labels)[0].shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "### Create intermediate layer activations"
@@ -416,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "outputs": [],
    "source": [
     "# fc1_output = Model(inputs=model.input, outputs=model.get_layer(name='fc1').output)\n",
@@ -436,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "outputs": [
     {
      "name": "stdout",
@@ -448,6 +529,7 @@
     }
    ],
    "source": [
+    "# create average activations for each digit\n",
     "fc1_activations = {}\n",
     "fc2_activations = {}\n",
     "output_activations = {}\n",
@@ -469,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "outputs": [
     {
      "data": {
@@ -573,6 +655,7 @@
     }
    ],
    "source": [
+    "# create images of average digits\n",
     "images = {}\n",
     "for digit in range(10):\n",
     "    cur_name = get_average_digit_instance_name(digit)\n",
@@ -590,43 +673,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
+   "outputs": [],
+   "source": [
+    "digit_to_instances = {digit:[get_average_digit_instance_name(digit)] for digit in range(10)}"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nine #49           \n",
+      "Nine #286           \n",
       "Done\n"
      ]
     }
    ],
    "source": [
-    "digit_to_name = {0: \"Zero\",\n",
-    "                 1: \"One\",\n",
-    "                 2: \"Two\",\n",
-    "                 3: \"Three\",\n",
-    "                 4: \"Four\",\n",
-    "                 5: \"Five\",\n",
-    "                 6: \"Six\",\n",
-    "                 7: \"Seven\",\n",
-    "                 8: \"Eight\",\n",
-    "                 9: \"Nine\"}\n",
-    "\n",
-    "digit_to_instances = {digit:[get_average_digit_instance_name(digit)] for digit in range(10)}\n",
-    "images_to_use = 49\n",
-    "for digit in range(10):\n",
-    "    cur_digit = all_data[all_labels == digit][:images_to_use]\n",
-    "    fc1_t, fc2_t, out_t = intermediate_outputs.predict(cur_digit)\n",
-    "    for idx, fc1a, fc2a, oa, img in zip(range(images_to_use),fc1_t, fc2_t, out_t, cur_digit.reshape(-1, 28, 28)):\n",
-    "        instance_name = f'{digit_to_name[digit]} #{idx+1}'\n",
+    "for digit, (cur_images, cur_labels, cur_names, cur_dimred_mask) in digit_selected_data.items():\n",
+    "    fc1_t, fc2_t, out_t = intermediate_outputs.predict(cur_images)\n",
+    "    for instance_name, fc1a, fc2a, oa, img in zip(cur_names, fc1_t, fc2_t, out_t, cur_images.reshape(-1, 28, 28)):\n",
     "        print(f'\\r{instance_name}'+10*' ', end=\"\")\n",
     "        fc1_activations[instance_name] = fc1a.tolist()\n",
     "        fc2_activations[instance_name] = fc2a.tolist()\n",
     "        output_activations[instance_name] = oa.tolist()\n",
     "        images[instance_name] = img.tolist()\n",
     "        digit_to_instances[digit].append(instance_name)\n",
-    "print('\\nDone')\n",
+    "print('\\nDone')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# images_to_use = 49\n",
+    "# for digit in range(10):\n",
+    "#     cur_digit = all_data[all_labels == digit][:images_to_use]\n",
+    "#     fc1_t, fc2_t, out_t = intermediate_outputs.predict(cur_digit)\n",
+    "#     for idx, fc1a, fc2a, oa, img in zip(range(images_to_use),fc1_t, fc2_t, out_t, cur_digit.reshape(-1, 28, 28)):\n",
+    "#         #instance_name = f'{digit_to_name[digit]} #{idx+1}'\n",
+    "#         instance_name = get_instance_name(digit, idx+1)\n",
+    "#         print(f'\\r{instance_name}'+10*' ', end=\"\")\n",
+    "#         fc1_activations[instance_name] = fc1a.tolist()\n",
+    "#         fc2_activations[instance_name] = fc2a.tolist()\n",
+    "#         output_activations[instance_name] = oa.tolist()\n",
+    "#         images[instance_name] = img.tolist()\n",
+    "#         digit_to_instances[digit].append(instance_name)\n",
+    "# print('\\nDone')\n",
     "\n"
    ],
    "metadata": {
@@ -649,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 66,
    "outputs": [],
    "source": [
     "activations = {'FC1': fc1_activations,\n",
@@ -665,12 +774,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "outputs": [],
+   "execution_count": 67,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "2511"
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "out_data = {'activations': activations,\n",
-    "            'images': images,\n",
-    "            'digit_to_instances': digit_to_instances}"
+    "len(instance_prediction_results)"
    ],
    "metadata": {
     "collapsed": false,
@@ -681,7 +797,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
+   "outputs": [],
+   "source": [
+    "out_data = {'activations': activations,\n",
+    "            'images': images,\n",
+    "            'digit_to_instances': digit_to_instances,\n",
+    "            'prediction_results': instance_prediction_results}"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "outputs": [],
    "source": [
     "#prototype for saving data\n",
