Implemented extraction of the images subset to use for dimensionality reduction

--- a/src/neural_network.ipynb
+++ b/src/neural_network.ipynb
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -441,7 +441,7 @@
     "\n",
     "np.random.seed(123)\n",
     "random_sample_size = 200\n",
-    "digit_selected_data = {}\n",
+    "selected_data = {}\n",
     "instance_prediction_results = {get_average_digit_instance_name(digit): {'real': digit, 'pred': digit} for digit in range(10)}\n",
     "\n",
     "for digit in range(10):\n",
@@ -464,7 +464,7 @@
     "        names.append(cur_name)\n",
     "        instance_prediction_results[cur_name] = {'real': digit, 'pred': int(predicted_class)}\n",
     "    npnames = np.array(names)\n",
-    "    digit_selected_data[digit] = (all_subset, all_subset_preds, npnames, dimred_mask)\n",
+    "    selected_data[digit] = (all_subset, all_subset_preds, npnames, dimred_mask)\n",
     "\n",
     "    print(f'{incorrect_indices.shape}'\n",
     "          f' {selected_indices.shape}'\n",
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "# fc1_output = Model(inputs=model.input, outputs=model.get_layer(name='fc1').output)\n",
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "digit_to_instances = {digit:[get_average_digit_instance_name(digit)] for digit in range(10)}"
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -699,7 +699,7 @@
     }
    ],
    "source": [
-    "for digit, (cur_images, cur_labels, cur_names, cur_dimred_mask) in digit_selected_data.items():\n",
+    "for digit, (cur_images, _, cur_names, cur_dimred_mask) in selected_data.items():\n",
     "    fc1_t, fc2_t, out_t = intermediate_outputs.predict(cur_images)\n",
     "    for instance_name, fc1a, fc2a, oa, img in zip(cur_names, fc1_t, fc2_t, out_t, cur_images.reshape(-1, 28, 28)):\n",
     "        print(f'\\r{instance_name}'+10*' ', end=\"\")\n",
@@ -719,23 +719,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 23,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('a', 'b', 'c')\n",
+      "(0, 1, 2)\n"
+     ]
+    }
+   ],
    "source": [
-    "# images_to_use = 49\n",
-    "# for digit in range(10):\n",
-    "#     cur_digit = all_data[all_labels == digit][:images_to_use]\n",
-    "#     fc1_t, fc2_t, out_t = intermediate_outputs.predict(cur_digit)\n",
-    "#     for idx, fc1a, fc2a, oa, img in zip(range(images_to_use),fc1_t, fc2_t, out_t, cur_digit.reshape(-1, 28, 28)):\n",
-    "#         #instance_name = f'{digit_to_name[digit]} #{idx+1}'\n",
-    "#         instance_name = get_instance_name(digit, idx+1)\n",
-    "#         print(f'\\r{instance_name}'+10*' ', end=\"\")\n",
-    "#         fc1_activations[instance_name] = fc1a.tolist()\n",
-    "#         fc2_activations[instance_name] = fc2a.tolist()\n",
-    "#         output_activations[instance_name] = oa.tolist()\n",
-    "#         images[instance_name] = img.tolist()\n",
-    "#         digit_to_instances[digit].append(instance_name)\n",
-    "# print('\\nDone')\n",
+    "a = {0: (\"a\", 0), 1:(\"b\", 1), 2:(\"c\",2)}\n",
+    "c, d =zip(*a.values())\n",
+    "print(c)\n",
+    "print(d)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Separate data for dimensionality reduction\n",
+    "When selecting images, we selected a random sample of 200 images for each digit\n",
+    "as well as all misclassifications for the digit. For scatterplots using dimensionality reduction,\n",
+    "using all of these would result in scatterplots with a skewed distribution, therefore we need to again extract back\n",
+    "the random sample of 200 images, using the dimred mask we created earlier."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "18"
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# concatenate all selected digit images (and names and labels and mask)\n",
+    "# and then select those for dimensionality reduction using the concatenated dimred mask\n",
+    "*concat_imgs_predictions_names, concat_dimred_mask = (np.concatenate(x, axis=0) for x in zip(*selected_data.values()))\n",
+    "dimred_imgs, dimred_preds, dimred_names = (x[concat_dimred_mask] for x in concat_imgs_predictions_names)\n",
+    "dimred_true_labels = np.repeat(range(10), repeats=random_sample_size)\n",
     "\n"
    ],
    "metadata": {
@@ -758,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "activations = {'FC1': fc1_activations,\n",
@@ -774,13 +816,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 18,
    "outputs": [
     {
      "data": {
       "text/plain": "2511"
      },
-     "execution_count": 67,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 19,
    "outputs": [],
    "source": [
     "out_data = {'activations': activations,\n",
