--- a/src/neural_network.ipynb
+++ b/src/neural_network.ipynb
@@ -503,10 +503,10 @@
     "# fc1_output = Model(inputs=model.input, outputs=model.get_layer(name='fc1').output)\n",
     "# fc2_output = Model(inputs=model.input, outputs=model.get_layer(name='fc2').output)\n",
     "# print(fc1_output.predict(X_test[0:1]))\n",
-    "intermediate_outputs = Model(inputs=model.input, outputs=[model.get_layer(name='fc1').output,\n",
+    "intermediate_dense_outputs = Model(inputs=model.input, outputs=[model.get_layer(name='fc1').output,\n",
     "                                                          model.get_layer(name='fc2').output,\n",
     "                                                          model.output])\n",
-    "fc1_t, fc2_t, out_t = map(lambda x: np.average(x, axis=0), intermediate_outputs.predict(X_test[0:2]))\n"
+    "fc1_t, fc2_t, out_t = map(lambda x: np.average(x, axis=0), intermediate_dense_outputs.predict(X_test[0:2]))\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -537,7 +537,7 @@
     "    cur_name = get_average_digit_instance_name(digit)\n",
     "    print(f'\\r{cur_name}', end=\"\")\n",
     "    cur_digit = all_data[all_labels == digit]\n",
-    "    fc1_t, fc2_t, out_t = map(lambda x: np.average(x, axis=0).tolist(), intermediate_outputs.predict(cur_digit))\n",
+    "    fc1_t, fc2_t, out_t = map(lambda x: np.average(x, axis=0).tolist(), intermediate_dense_outputs.predict(cur_digit))\n",
     "    fc1_activations[cur_name], fc2_activations[cur_name], output_activations[cur_name] = fc1_t, fc2_t, out_t\n",
     "print(\"\\nDone\")\n",
     "# print(np.average(fc1_output.predict(all_data[all_labels == 0]), axis=0).shape)"
@@ -700,7 +700,7 @@
    ],
    "source": [
     "for digit, (cur_images, _, cur_names, cur_dimred_mask) in selected_data.items():\n",
-    "    fc1_t, fc2_t, out_t = intermediate_outputs.predict(cur_images)\n",
+    "    fc1_t, fc2_t, out_t = intermediate_dense_outputs.predict(cur_images)\n",
     "    for instance_name, fc1a, fc2a, oa, img in zip(cur_names, fc1_t, fc2_t, out_t, cur_images.reshape(-1, 28, 28)):\n",
     "        print(f'\\r{instance_name}'+10*' ', end=\"\")\n",
     "        fc1_activations[instance_name] = fc1a.tolist()\n",
@@ -777,8 +777,54 @@
     "# and then select those for dimensionality reduction using the concatenated dimred mask\n",
     "*concat_imgs_predictions_names, concat_dimred_mask = (np.concatenate(x, axis=0) for x in zip(*selected_data.values()))\n",
     "dimred_imgs, dimred_preds, dimred_names = (x[concat_dimred_mask] for x in concat_imgs_predictions_names)\n",
-    "dimred_true_labels = np.repeat(range(10), repeats=random_sample_size)\n",
-    "\n"
+    "dimred_true_labels = np.repeat(range(10), repeats=random_sample_size)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "outputs": [],
+   "source": [
+    "intermediate_all_outputs = Model(inputs=model.input,\n",
+    "                                 outputs=[model.get_layer(name='conv1').output,\n",
+    "                                          model.get_layer(name='conv2').output,\n",
+    "                                          model.get_layer(name='fc1').output,\n",
+    "                                          model.get_layer(name='fc2').output,\n",
+    "                                          model.output])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Get all intermediate layer outputs for dimensionality reduction"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "outputs": [],
+   "source": [
+    "dimred_conv1, dimred_conv2, dimred_fc1, dimred_fc2, dimred_out = intermediate_all_outputs.predict(dimred_imgs)\n",
+    "dimred_conv1 = dimred_conv1.reshape(dimred_conv1.shape[0], -1)  # flatten along unneeded dimensions\n",
+    "dimred_conv2 = dimred_conv2.reshape(dimred_conv2.shape[0], -1)\n"
    ],
    "metadata": {
     "collapsed": false,
